# google-yamlfmt

./: .gitignore  README.md  hatch_build.py  pyproject.toml
.github/workflows/: lint-and-fmt.yml  release.yaml
src/yamlfmt/: __init__.py  __main__.py  _version.pyi
tests/: test_yamlfmt.py
