[project]
name = "pre-commit-yamlfmt"
version = "0.16.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
yamlfmt = "yamlfmt.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yamlfmt"]

[tool.hatch.build.hooks]
vcs.version-file = "src/yamlfmt/_version.py"

[tool.hatch.build.hooks.custom]

[tool.hatch]
version.source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]
