[project]
name = "google-yamlfmt"
version = "0.16.0"
description = "A tool for formatting YAML files, yamlfmt from Google: https://github.com/google/yamlfmt"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
yamlfmt = "yamlfmt.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yamlfmt"]

[tool.hatch.build.hooks]
vcs.version-file = "src/yamlfmt/_version.py"

[tool.hatch.build.hooks.custom]

[tool.hatch]
version.source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]
